fixed misspelling in application name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exspensify-app",
+  "name": "expensify-app",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Michael James",
