--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "15.6.1",
     "react-dates": "12.7.0",
@@ -41,12 +42,12 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
-      "enzyme": "3.0.0",
-      "enzyme-adapter-react-15": "1.0.0",
-      "enzyme-to-json": "3.0.1",
-      "jest": "20.0.4",
-      "react-addons-shallow-compare": "15.6.0",
-      "react-test-renderer": "15.6.1",
-      "webpack-dev-server": "2.5.1"
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-15": "1.0.0",
+    "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",
+    "react-addons-shallow-compare": "15.6.0",
+    "react-test-renderer": "15.6.1",
+    "webpack-dev-server": "2.5.1"
   }
 }
